--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-    <p>
-        첫번째 프로젝트 테스트!!
-    </p>
-</body>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <p>첫번째 프로젝트 테스트!!</p>
+    <h4>추가로 작성한 부분</h4>
+  </body>
 </html>
